website skeleton ready

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --secondary: #111010;
+  --primary: #00e676;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: Nunito;
+  src: url("./assets/fonts/Nunito-Regular.ttf");
+}
+
+@font-face {
+  font-family: Nunito;
+  src: url("./assets/fonts/Nunito-Bold.ttf");
+  font-weight: bold;
+}
+
+.gradient-background {
+  background: linear-gradient(62.82deg, #232323 0%, rgba(0, 0, 0, 0) 77.14%),
+    #232323;
+}
+
+.customFadeIn {
+  animation-name: fadeInAnimation;
+  animation-delay: 700ms;
+}
+
+
+.fadeOutAnimation {
+  animation-name: fadeOutAnimation;
+  animation-delay: 200ms;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeOutAnimation {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
